gramatica.output
Estado 67 conflictos: 1 reducción/reducción
Estado 82 conflictos: 1 desplazamiento/reducción
Estado 137 conflictos: 3 desplazamiento/reducción


Gramática

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: tk_algoritmo tk_identificador tk_punto_coma cabecera_alg bloque_alg tk_falgoritmo

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal tk_precondicion

    3 bloque_alg: bloque tk_postcondicion

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_cte decl_globales
    6              | %empty

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_cte declaraciones
   13              | declaracion_var declaraciones
   14              | %empty

   15 declaracion_tipo: tk_tipo lista_d_tipo tk_ftipo tk_punto_coma

   16 declaracion_cte: tk_const lista_d_cte tk_fconst tk_punto_coma

   17 declaracion_var: tk_var lista_d_var tk_fvar tk_punto_coma

   18 lista_d_tipo: tk_identificador tk_igual d_tipo tk_punto_coma lista_d_tipo
   19             | %empty

   20 d_tipo: tk_tupla lista_campos tk_ftupla
   21       | tk_tabla tk_corchete_abierto expresion_t tk_subrango expresion_t tk_corchete_cerrado tk_de d_tipo
   22       | tk_identificador
   23       | expresion_t tk_subrango expresion_t
   24       | tk_ref d_tipo
   25       | tk_tipo_base

   26 expresion_t: expresion
   27            | tk_literal_caracter

   28 lista_campos: tk_identificador tk_dospuntos d_tipo tk_punto lista_campos
   29             | %empty

   30 lista_d_cte: tk_identificador tk_igual tk_literal tk_punto_coma lista_d_cte
   31            | %empty

   32 lista_d_var: lista_id tk_dospuntos d_tipo tk_punto_coma lista_d_var
   33            | %empty

   34 lista_id: tk_identificador tk_coma lista_id
   35         | tk_identificador
   36         | %empty

   37 decl_ent_sal: decl_ent
   38             | decl_ent decl_sal
   39             | decl_sal

   40 decl_ent: tk_ent lista_d_var

   41 decl_sal: tk_sal lista_d_var

   42 expresion: funcion_ll
   43          | expresion tk_suma expresion
   44          | expresion tk_resta expresion
   45          | expresion tk_multiplicacion expresion
   46          | expresion tk_division expresion
   47          | expresion tk_modulo expresion
   48          | expresion tk_div expresion
   49          | tk_parentesis_apertura expresion tk_parentesis_cierre
   50          | operando
   51          | tk_literal_numerico
   52          | tk_resta expresion
   53          | expresion tk_AND expresion
   54          | expresion tk_OR expresion
   55          | tk_NOT expresion
   56          | tk_verdadero
   57          | tk_falso
   58          | expresion tk_operador_relacional expresion

   59 operando: tk_identificador
   60         | operando tk_punto operando
   61         | operando tk_corchete_abierto expresion tk_corchete_cerrado
   62         | operando tk_ref

   63 instrucciones: instruccion tk_punto_coma instrucciones
   64              | instruccion

   65 instruccion: tk_continuar
   66            | asignacion
   67            | alternativa
   68            | iteracion
   69            | accion_ll

   70 asignacion: operando tk_asignacion expresion

   71 alternativa: tk_si expresion tk_entonces instrucciones lista_opciones tk_fsi

   72 lista_opciones: tk_sino expresion tk_entonces instrucciones lista_opciones
   73               | %empty

   74 iteracion: it_cota_fija
   75          | it_cota_exp

   76 it_cota_exp: tk_mientras expresion tk_hacer instrucciones tk_fmientras

   77 it_cota_fija: tk_para tk_identificador tk_asignacion expresion tk_hasta expresion tk_hacer instrucciones tk_fpara

   78 accion_d: tk_accion a_cabecera bloque tk_faccion

   79 funcion_d: tk_funcion f_cabecera bloque tk_dev expresion tk_ffuncion

   80 a_cabecera: tk_identificador tk_parentesis_apertura d_par_form tk_parentesis_cierre tk_punto_coma

   81 f_cabecera: tk_identificador tk_parentesis_apertura lista_d_var tk_parentesis_cierre tk_dev d_tipo tk_punto_coma

   82 d_par_form: d_p_form tk_punto_coma d_par_form
   83           | %empty

   84 d_p_form: tk_ent lista_id tk_dospuntos d_tipo
   85         | tk_sal lista_id tk_dospuntos d_tipo
   86         | tk_ent_sal lista_id tk_dospuntos d_tipo

   87 accion_ll: tk_identificador tk_parentesis_apertura l_ll tk_parentesis_cierre

   88 funcion_ll: tk_identificador tk_parentesis_apertura l_ll tk_parentesis_cierre

   89 l_ll: expresion tk_coma l_ll
   90     | expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
tk_algoritmo (258) 1
tk_identificador (259) 1 18 22 28 30 34 35 59 77 80 81 87 88
tk_precondicion (260) 2
tk_postcondicion (261) 3
tk_punto_coma (262) 1 15 16 17 18 30 32 63 80 81 82
tk_punto (263) 28 60
tk_falgoritmo (264) 1
tk_tipo (265) 15
tk_ftipo (266) 15
tk_const (267) 16
tk_fconst (268) 16
tk_var (269) 17
tk_fvar (270) 17
tk_tupla (271) 20
tk_ftupla (272) 20
tk_igual (273) 18 30
tk_tabla (274) 21
tk_dospuntos (275) 28 32 84 85 86
tk_de (276) 21
tk_corchete_abierto (277) 21 61
tk_corchete_cerrado (278) 21 61
tk_ref (279) 24 62
tk_tipo_base (280) 25
tk_literal_caracter (281) 27
tk_literal (282) 30
tk_coma (283) 34 89
tk_ent (284) 40 84
tk_sal (285) 41 85
tk_ent_sal (286) 86
tk_suma (287) 43
tk_resta (288) 44 52
tk_AND (289) 53
tk_OR (290) 54
tk_multiplicacion (291) 45
tk_division (292) 46
tk_modulo (293) 47
tk_div (294) 48
tk_operador_relacional (295) 58
tk_NOT (296) 55
tk_menos_unario (297)
tk_parentesis_apertura (298) 49 80 81 87 88
tk_parentesis_cierre (299) 49 80 81 87 88
tk_literal_numerico (300) 51
tk_verdadero (301) 56
tk_falso (302) 57
tk_continuar (303) 65
tk_asignacion (304) 70 77
tk_si (305) 71
tk_fsi (306) 71
tk_entonces (307) 71 72
tk_sino (308) 72
tk_mientras (309) 76
tk_fmientras (310) 76
tk_hacer (311) 76 77
tk_para (312) 77
tk_fpara (313) 77
tk_hasta (314) 77
tk_accion (315) 78
tk_faccion (316) 78
tk_funcion (317) 79
tk_ffuncion (318) 79
tk_dev (319) 79 81
tk_subrango (320) 21 23


No terminales con las reglas donde aparecen

$accept (66)
    en la izquierda: 0
desc_algoritmo (67)
    en la izquierda: 1, en la derecha: 0
cabecera_alg (68)
    en la izquierda: 2, en la derecha: 1
bloque_alg (69)
    en la izquierda: 3, en la derecha: 1
decl_globales (70)
    en la izquierda: 4 5 6, en la derecha: 2 4 5
decl_a_f (71)
    en la izquierda: 7 8 9, en la derecha: 2 7 8
bloque (72)
    en la izquierda: 10, en la derecha: 3 78 79
declaraciones (73)
    en la izquierda: 11 12 13 14, en la derecha: 10 11 12 13
declaracion_tipo (74)
    en la izquierda: 15, en la derecha: 4 11
declaracion_cte (75)
    en la izquierda: 16, en la derecha: 5 12
declaracion_var (76)
    en la izquierda: 17, en la derecha: 13
lista_d_tipo (77)
    en la izquierda: 18 19, en la derecha: 15 18
d_tipo (78)
    en la izquierda: 20 21 22 23 24 25, en la derecha: 18 21 24 28
    32 81 84 85 86
expresion_t (79)
    en la izquierda: 26 27, en la derecha: 21 23
lista_campos (80)
    en la izquierda: 28 29, en la derecha: 20 28
lista_d_cte (81)
    en la izquierda: 30 31, en la derecha: 16 30
lista_d_var (82)
    en la izquierda: 32 33, en la derecha: 17 32 40 41 81
lista_id (83)
    en la izquierda: 34 35 36, en la derecha: 32 34 84 85 86
decl_ent_sal (84)
    en la izquierda: 37 38 39, en la derecha: 2
decl_ent (85)
    en la izquierda: 40, en la derecha: 37 38
decl_sal (86)
    en la izquierda: 41, en la derecha: 38 39
expresion (87)
    en la izquierda: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58, en la derecha: 26 43 44 45 46 47 48 49 52 53 54 55 58 61 70
    71 72 76 77 79 89 90
operando (88)
    en la izquierda: 59 60 61 62, en la derecha: 50 60 61 62 70
instrucciones (89)
    en la izquierda: 63 64, en la derecha: 10 63 71 72 76 77
instruccion (90)
    en la izquierda: 65 66 67 68 69, en la derecha: 63 64
asignacion (91)
    en la izquierda: 70, en la derecha: 66
alternativa (92)
    en la izquierda: 71, en la derecha: 67
lista_opciones (93)
    en la izquierda: 72 73, en la derecha: 71 72
iteracion (94)
    en la izquierda: 74 75, en la derecha: 68
it_cota_exp (95)
    en la izquierda: 76, en la derecha: 75
it_cota_fija (96)
    en la izquierda: 77, en la derecha: 74
accion_d (97)
    en la izquierda: 78, en la derecha: 7
funcion_d (98)
    en la izquierda: 79, en la derecha: 8
a_cabecera (99)
    en la izquierda: 80, en la derecha: 78
f_cabecera (100)
    en la izquierda: 81, en la derecha: 79
d_par_form (101)
    en la izquierda: 82 83, en la derecha: 80 82
d_p_form (102)
    en la izquierda: 84 85 86, en la derecha: 82
accion_ll (103)
    en la izquierda: 87, en la derecha: 69
funcion_ll (104)
    en la izquierda: 88, en la derecha: 42
l_ll (105)
    en la izquierda: 89 90, en la derecha: 87 88 89


Estado 0

    0 $accept: . desc_algoritmo $end

    tk_algoritmo  desplazar e ir al estado 1

    desc_algoritmo  ir al estado 2


Estado 1

    1 desc_algoritmo: tk_algoritmo . tk_identificador tk_punto_coma cabecera_alg bloque_alg tk_falgoritmo

    tk_identificador  desplazar e ir al estado 3


Estado 2

    0 $accept: desc_algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 desc_algoritmo: tk_algoritmo tk_identificador . tk_punto_coma cabecera_alg bloque_alg tk_falgoritmo

    tk_punto_coma  desplazar e ir al estado 5


Estado 4

    0 $accept: desc_algoritmo $end .

    $default  aceptar


Estado 5

    1 desc_algoritmo: tk_algoritmo tk_identificador tk_punto_coma . cabecera_alg bloque_alg tk_falgoritmo

    tk_tipo   desplazar e ir al estado 6
    tk_const  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    cabecera_alg      ir al estado 8
    decl_globales     ir al estado 9
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 6

   15 declaracion_tipo: tk_tipo . lista_d_tipo tk_ftipo tk_punto_coma

    tk_identificador  desplazar e ir al estado 12

    $default  reduce usando la regla 19 (lista_d_tipo)

    lista_d_tipo  ir al estado 13


Estado 7

   16 declaracion_cte: tk_const . lista_d_cte tk_fconst tk_punto_coma

    tk_identificador  desplazar e ir al estado 14

    $default  reduce usando la regla 31 (lista_d_cte)

    lista_d_cte  ir al estado 15


Estado 8

    1 desc_algoritmo: tk_algoritmo tk_identificador tk_punto_coma cabecera_alg . bloque_alg tk_falgoritmo

    tk_tipo   desplazar e ir al estado 6
    tk_const  desplazar e ir al estado 7
    tk_var    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    bloque_alg        ir al estado 17
    bloque            ir al estado 18
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 9

    2 cabecera_alg: decl_globales . decl_a_f decl_ent_sal tk_precondicion

    tk_accion   desplazar e ir al estado 23
    tk_funcion  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 25
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 10

    4 decl_globales: declaracion_tipo . decl_globales

    tk_tipo   desplazar e ir al estado 6
    tk_const  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales     ir al estado 28
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 11

    5 decl_globales: declaracion_cte . decl_globales

    tk_tipo   desplazar e ir al estado 6
    tk_const  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales     ir al estado 29
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 12

   18 lista_d_tipo: tk_identificador . tk_igual d_tipo tk_punto_coma lista_d_tipo

    tk_igual  desplazar e ir al estado 30


Estado 13

   15 declaracion_tipo: tk_tipo lista_d_tipo . tk_ftipo tk_punto_coma

    tk_ftipo  desplazar e ir al estado 31


Estado 14

   30 lista_d_cte: tk_identificador . tk_igual tk_literal tk_punto_coma lista_d_cte

    tk_igual  desplazar e ir al estado 32


Estado 15

   16 declaracion_cte: tk_const lista_d_cte . tk_fconst tk_punto_coma

    tk_fconst  desplazar e ir al estado 33


Estado 16

   17 declaracion_var: tk_var . lista_d_var tk_fvar tk_punto_coma

    tk_identificador  desplazar e ir al estado 34

    tk_dospuntos  reduce usando la regla 36 (lista_id)
    $default      reduce usando la regla 33 (lista_d_var)

    lista_d_var  ir al estado 35
    lista_id     ir al estado 36


Estado 17

    1 desc_algoritmo: tk_algoritmo tk_identificador tk_punto_coma cabecera_alg bloque_alg . tk_falgoritmo

    tk_falgoritmo  desplazar e ir al estado 37


Estado 18

    3 bloque_alg: bloque . tk_postcondicion

    tk_postcondicion  desplazar e ir al estado 38


Estado 19

   10 bloque: declaraciones . instrucciones

    tk_identificador  desplazar e ir al estado 39
    tk_continuar      desplazar e ir al estado 40
    tk_si             desplazar e ir al estado 41
    tk_mientras       desplazar e ir al estado 42
    tk_para           desplazar e ir al estado 43

    operando       ir al estado 44
    instrucciones  ir al estado 45
    instruccion    ir al estado 46
    asignacion     ir al estado 47
    alternativa    ir al estado 48
    iteracion      ir al estado 49
    it_cota_exp    ir al estado 50
    it_cota_fija   ir al estado 51
    accion_ll      ir al estado 52


Estado 20

   11 declaraciones: declaracion_tipo . declaraciones

    tk_tipo   desplazar e ir al estado 6
    tk_const  desplazar e ir al estado 7
    tk_var    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 53
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 21

   12 declaraciones: declaracion_cte . declaraciones

    tk_tipo   desplazar e ir al estado 6
    tk_const  desplazar e ir al estado 7
    tk_var    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 54
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 22

   13 declaraciones: declaracion_var . declaraciones

    tk_tipo   desplazar e ir al estado 6
    tk_const  desplazar e ir al estado 7
    tk_var    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 55
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 23

   78 accion_d: tk_accion . a_cabecera bloque tk_faccion

    tk_identificador  desplazar e ir al estado 56

    a_cabecera  ir al estado 57


Estado 24

   79 funcion_d: tk_funcion . f_cabecera bloque tk_dev expresion tk_ffuncion

    tk_identificador  desplazar e ir al estado 58

    f_cabecera  ir al estado 59


Estado 25

    2 cabecera_alg: decl_globales decl_a_f . decl_ent_sal tk_precondicion

    tk_ent  desplazar e ir al estado 60
    tk_sal  desplazar e ir al estado 61

    decl_ent_sal  ir al estado 62
    decl_ent      ir al estado 63
    decl_sal      ir al estado 64


Estado 26

    7 decl_a_f: accion_d . decl_a_f

    tk_accion   desplazar e ir al estado 23
    tk_funcion  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 65
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 27

    8 decl_a_f: funcion_d . decl_a_f

    tk_accion   desplazar e ir al estado 23
    tk_funcion  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 66
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 28

    4 decl_globales: declaracion_tipo decl_globales .

    $default  reduce usando la regla 4 (decl_globales)


Estado 29

    5 decl_globales: declaracion_cte decl_globales .

    $default  reduce usando la regla 5 (decl_globales)


Estado 30

   18 lista_d_tipo: tk_identificador tk_igual . d_tipo tk_punto_coma lista_d_tipo

    tk_identificador        desplazar e ir al estado 67
    tk_tupla                desplazar e ir al estado 68
    tk_tabla                desplazar e ir al estado 69
    tk_ref                  desplazar e ir al estado 70
    tk_tipo_base            desplazar e ir al estado 71
    tk_literal_caracter     desplazar e ir al estado 72
    tk_resta                desplazar e ir al estado 73
    tk_NOT                  desplazar e ir al estado 74
    tk_parentesis_apertura  desplazar e ir al estado 75
    tk_literal_numerico     desplazar e ir al estado 76
    tk_verdadero            desplazar e ir al estado 77
    tk_falso                desplazar e ir al estado 78

    d_tipo       ir al estado 79
    expresion_t  ir al estado 80
    expresion    ir al estado 81
    operando     ir al estado 82
    funcion_ll   ir al estado 83


Estado 31

   15 declaracion_tipo: tk_tipo lista_d_tipo tk_ftipo . tk_punto_coma

    tk_punto_coma  desplazar e ir al estado 84


Estado 32

   30 lista_d_cte: tk_identificador tk_igual . tk_literal tk_punto_coma lista_d_cte

    tk_literal  desplazar e ir al estado 85


Estado 33

   16 declaracion_cte: tk_const lista_d_cte tk_fconst . tk_punto_coma

    tk_punto_coma  desplazar e ir al estado 86


Estado 34

   34 lista_id: tk_identificador . tk_coma lista_id
   35         | tk_identificador .

    tk_coma  desplazar e ir al estado 87

    $default  reduce usando la regla 35 (lista_id)


Estado 35

   17 declaracion_var: tk_var lista_d_var . tk_fvar tk_punto_coma

    tk_fvar  desplazar e ir al estado 88


Estado 36

   32 lista_d_var: lista_id . tk_dospuntos d_tipo tk_punto_coma lista_d_var

    tk_dospuntos  desplazar e ir al estado 89


Estado 37

    1 desc_algoritmo: tk_algoritmo tk_identificador tk_punto_coma cabecera_alg bloque_alg tk_falgoritmo .

    $default  reduce usando la regla 1 (desc_algoritmo)


Estado 38

    3 bloque_alg: bloque tk_postcondicion .

    $default  reduce usando la regla 3 (bloque_alg)


Estado 39

   59 operando: tk_identificador .
   87 accion_ll: tk_identificador . tk_parentesis_apertura l_ll tk_parentesis_cierre

    tk_parentesis_apertura  desplazar e ir al estado 90

    $default  reduce usando la regla 59 (operando)


Estado 40

   65 instruccion: tk_continuar .

    $default  reduce usando la regla 65 (instruccion)


Estado 41

   71 alternativa: tk_si . expresion tk_entonces instrucciones lista_opciones tk_fsi

    tk_identificador        desplazar e ir al estado 91
    tk_resta                desplazar e ir al estado 73
    tk_NOT                  desplazar e ir al estado 74
    tk_parentesis_apertura  desplazar e ir al estado 75
    tk_literal_numerico     desplazar e ir al estado 76
    tk_verdadero            desplazar e ir al estado 77
    tk_falso                desplazar e ir al estado 78

    expresion   ir al estado 92
    operando    ir al estado 82
    funcion_ll  ir al estado 83


Estado 42

   76 it_cota_exp: tk_mientras . expresion tk_hacer instrucciones tk_fmientras

    tk_identificador        desplazar e ir al estado 91
    tk_resta                desplazar e ir al estado 73
    tk_NOT                  desplazar e ir al estado 74
    tk_parentesis_apertura  desplazar e ir al estado 75
    tk_literal_numerico     desplazar e ir al estado 76
    tk_verdadero            desplazar e ir al estado 77
    tk_falso                desplazar e ir al estado 78

    expresion   ir al estado 93
    operando    ir al estado 82
    funcion_ll  ir al estado 83


Estado 43

   77 it_cota_fija: tk_para . tk_identificador tk_asignacion expresion tk_hasta expresion tk_hacer instrucciones tk_fpara

    tk_identificador  desplazar e ir al estado 94


Estado 44

   60 operando: operando . tk_punto operando
   61         | operando . tk_corchete_abierto expresion tk_corchete_cerrado
   62         | operando . tk_ref
   70 asignacion: operando . tk_asignacion expresion

    tk_punto             desplazar e ir al estado 95
    tk_corchete_abierto  desplazar e ir al estado 96
    tk_ref               desplazar e ir al estado 97
    tk_asignacion        desplazar e ir al estado 98


Estado 45

   10 bloque: declaraciones instrucciones .

    $default  reduce usando la regla 10 (bloque)


Estado 46

   63 instrucciones: instruccion . tk_punto_coma instrucciones
   64              | instruccion .

    tk_punto_coma  desplazar e ir al estado 99

    $default  reduce usando la regla 64 (instrucciones)


Estado 47

   66 instruccion: asignacion .

    $default  reduce usando la regla 66 (instruccion)


Estado 48

   67 instruccion: alternativa .

    $default  reduce usando la regla 67 (instruccion)


Estado 49

   68 instruccion: iteracion .

    $default  reduce usando la regla 68 (instruccion)


Estado 50

   75 iteracion: it_cota_exp .

    $default  reduce usando la regla 75 (iteracion)


Estado 51

   74 iteracion: it_cota_fija .

    $default  reduce usando la regla 74 (iteracion)


Estado 52

   69 instruccion: accion_ll .

    $default  reduce usando la regla 69 (instruccion)


Estado 53

   11 declaraciones: declaracion_tipo declaraciones .

    $default  reduce usando la regla 11 (declaraciones)


Estado 54

   12 declaraciones: declaracion_cte declaraciones .

    $default  reduce usando la regla 12 (declaraciones)


Estado 55

   13 declaraciones: declaracion_var declaraciones .

    $default  reduce usando la regla 13 (declaraciones)


Estado 56

   80 a_cabecera: tk_identificador . tk_parentesis_apertura d_par_form tk_parentesis_cierre tk_punto_coma

    tk_parentesis_apertura  desplazar e ir al estado 100


Estado 57

   78 accion_d: tk_accion a_cabecera . bloque tk_faccion

    tk_tipo   desplazar e ir al estado 6
    tk_const  desplazar e ir al estado 7
    tk_var    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    bloque            ir al estado 101
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 58

   81 f_cabecera: tk_identificador . tk_parentesis_apertura lista_d_var tk_parentesis_cierre tk_dev d_tipo tk_punto_coma

    tk_parentesis_apertura  desplazar e ir al estado 102


Estado 59

   79 funcion_d: tk_funcion f_cabecera . bloque tk_dev expresion tk_ffuncion

    tk_tipo   desplazar e ir al estado 6
    tk_const  desplazar e ir al estado 7
    tk_var    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    bloque            ir al estado 103
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 60

   40 decl_ent: tk_ent . lista_d_var

    tk_identificador  desplazar e ir al estado 34

    tk_dospuntos  reduce usando la regla 36 (lista_id)
    $default      reduce usando la regla 33 (lista_d_var)

    lista_d_var  ir al estado 104
    lista_id     ir al estado 36


Estado 61

   41 decl_sal: tk_sal . lista_d_var

    tk_identificador  desplazar e ir al estado 34

    tk_dospuntos  reduce usando la regla 36 (lista_id)
    $default      reduce usando la regla 33 (lista_d_var)

    lista_d_var  ir al estado 105
    lista_id     ir al estado 36


Estado 62

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal . tk_precondicion

    tk_precondicion  desplazar e ir al estado 106


Estado 63

   37 decl_ent_sal: decl_ent .
   38             | decl_ent . decl_sal

    tk_sal  desplazar e ir al estado 61

    $default  reduce usando la regla 37 (decl_ent_sal)

    decl_sal  ir al estado 107


Estado 64

   39 decl_ent_sal: decl_sal .

    $default  reduce usando la regla 39 (decl_ent_sal)


Estado 65

    7 decl_a_f: accion_d decl_a_f .

    $default  reduce usando la regla 7 (decl_a_f)


Estado 66

    8 decl_a_f: funcion_d decl_a_f .

    $default  reduce usando la regla 8 (decl_a_f)


Estado 67

   22 d_tipo: tk_identificador .
   59 operando: tk_identificador .
   88 funcion_ll: tk_identificador . tk_parentesis_apertura l_ll tk_parentesis_cierre

    tk_parentesis_apertura  desplazar e ir al estado 108

    tk_punto_coma  reduce usando la regla 22 (d_tipo)
    tk_punto       reduce usando la regla 22 (d_tipo)
    tk_punto       [reduce usando la regla 59 (operando)]
    $default       reduce usando la regla 59 (operando)


Estado 68

   20 d_tipo: tk_tupla . lista_campos tk_ftupla

    tk_identificador  desplazar e ir al estado 109

    $default  reduce usando la regla 29 (lista_campos)

    lista_campos  ir al estado 110


Estado 69

   21 d_tipo: tk_tabla . tk_corchete_abierto expresion_t tk_subrango expresion_t tk_corchete_cerrado tk_de d_tipo

    tk_corchete_abierto  desplazar e ir al estado 111


Estado 70

   24 d_tipo: tk_ref . d_tipo

    tk_identificador        desplazar e ir al estado 67
    tk_tupla                desplazar e ir al estado 68
    tk_tabla                desplazar e ir al estado 69
    tk_ref                  desplazar e ir al estado 70
    tk_tipo_base            desplazar e ir al estado 71
    tk_literal_caracter     desplazar e ir al estado 72
    tk_resta                desplazar e ir al estado 73
    tk_NOT                  desplazar e ir al estado 74
    tk_parentesis_apertura  desplazar e ir al estado 75
    tk_literal_numerico     desplazar e ir al estado 76
    tk_verdadero            desplazar e ir al estado 77
    tk_falso                desplazar e ir al estado 78

    d_tipo       ir al estado 112
    expresion_t  ir al estado 80
    expresion    ir al estado 81
    operando     ir al estado 82
    funcion_ll   ir al estado 83


Estado 71

   25 d_tipo: tk_tipo_base .

    $default  reduce usando la regla 25 (d_tipo)


Estado 72

   27 expresion_t: tk_literal_caracter .

    $default  reduce usando la regla 27 (expresion_t)


Estado 73

   52 expresion: tk_resta . expresion

    tk_identificador        desplazar e ir al estado 91
    tk_resta                desplazar e ir al estado 73
    tk_NOT                  desplazar e ir al estado 74
    tk_parentesis_apertura  desplazar e ir al estado 75
    tk_literal_numerico     desplazar e ir al estado 76
    tk_verdadero            desplazar e ir al estado 77
    tk_falso                desplazar e ir al estado 78

    expresion   ir al estado 113
    operando    ir al estado 82
    funcion_ll  ir al estado 83


Estado 74

   55 expresion: tk_NOT . expresion

    tk_identificador        desplazar e ir al estado 91
    tk_resta                desplazar e ir al estado 73
    tk_NOT                  desplazar e ir al estado 74
    tk_parentesis_apertura  desplazar e ir al estado 75
    tk_literal_numerico     desplazar e ir al estado 76
    tk_verdadero            desplazar e ir al estado 77
    tk_falso                desplazar e ir al estado 78

    expresion   ir al estado 114
    operando    ir al estado 82
    funcion_ll  ir al estado 83


Estado 75

   49 expresion: tk_parentesis_apertura . expresion tk_parentesis_cierre

    tk_identificador        desplazar e ir al estado 91
    tk_resta                desplazar e ir al estado 73
    tk_NOT                  desplazar e ir al estado 74
    tk_parentesis_apertura  desplazar e ir al estado 75
    tk_literal_numerico     desplazar e ir al estado 76
    tk_verdadero            desplazar e ir al estado 77
    tk_falso                desplazar e ir al estado 78

    expresion   ir al estado 115
    operando    ir al estado 82
    funcion_ll  ir al estado 83


Estado 76

   51 expresion: tk_literal_numerico .

    $default  reduce usando la regla 51 (expresion)


Estado 77

   56 expresion: tk_verdadero .

    $default  reduce usando la regla 56 (expresion)


Estado 78

   57 expresion: tk_falso .

    $default  reduce usando la regla 57 (expresion)


Estado 79

   18 lista_d_tipo: tk_identificador tk_igual d_tipo . tk_punto_coma lista_d_tipo

    tk_punto_coma  desplazar e ir al estado 116


Estado 80

   23 d_tipo: expresion_t . tk_subrango expresion_t

    tk_subrango  desplazar e ir al estado 117


Estado 81

   26 expresion_t: expresion .
   43 expresion: expresion . tk_suma expresion
   44          | expresion . tk_resta expresion
   45          | expresion . tk_multiplicacion expresion
   46          | expresion . tk_division expresion
   47          | expresion . tk_modulo expresion
   48          | expresion . tk_div expresion
   53          | expresion . tk_AND expresion
   54          | expresion . tk_OR expresion
   58          | expresion . tk_operador_relacional expresion

    tk_suma                 desplazar e ir al estado 118
    tk_resta                desplazar e ir al estado 119
    tk_AND                  desplazar e ir al estado 120
    tk_OR                   desplazar e ir al estado 121
    tk_multiplicacion       desplazar e ir al estado 122
    tk_division             desplazar e ir al estado 123
    tk_modulo               desplazar e ir al estado 124
    tk_div                  desplazar e ir al estado 125
    tk_operador_relacional  desplazar e ir al estado 126

    $default  reduce usando la regla 26 (expresion_t)


Estado 82

   50 expresion: operando .
   60 operando: operando . tk_punto operando
   61         | operando . tk_corchete_abierto expresion tk_corchete_cerrado
   62         | operando . tk_ref

    tk_punto             desplazar e ir al estado 95
    tk_corchete_abierto  desplazar e ir al estado 96
    tk_ref               desplazar e ir al estado 97

    tk_punto  [reduce usando la regla 50 (expresion)]
    $default  reduce usando la regla 50 (expresion)


Estado 83

   42 expresion: funcion_ll .

    $default  reduce usando la regla 42 (expresion)


Estado 84

   15 declaracion_tipo: tk_tipo lista_d_tipo tk_ftipo tk_punto_coma .

    $default  reduce usando la regla 15 (declaracion_tipo)


Estado 85

   30 lista_d_cte: tk_identificador tk_igual tk_literal . tk_punto_coma lista_d_cte

    tk_punto_coma  desplazar e ir al estado 127


Estado 86

   16 declaracion_cte: tk_const lista_d_cte tk_fconst tk_punto_coma .

    $default  reduce usando la regla 16 (declaracion_cte)


Estado 87

   34 lista_id: tk_identificador tk_coma . lista_id

    tk_identificador  desplazar e ir al estado 34

    $default  reduce usando la regla 36 (lista_id)

    lista_id  ir al estado 128


Estado 88

   17 declaracion_var: tk_var lista_d_var tk_fvar . tk_punto_coma

    tk_punto_coma  desplazar e ir al estado 129


Estado 89

   32 lista_d_var: lista_id tk_dospuntos . d_tipo tk_punto_coma lista_d_var

    tk_identificador        desplazar e ir al estado 67
    tk_tupla                desplazar e ir al estado 68
    tk_tabla                desplazar e ir al estado 69
    tk_ref                  desplazar e ir al estado 70
    tk_tipo_base            desplazar e ir al estado 71
    tk_literal_caracter     desplazar e ir al estado 72
    tk_resta                desplazar e ir al estado 73
    tk_NOT                  desplazar e ir al estado 74
    tk_parentesis_apertura  desplazar e ir al estado 75
    tk_literal_numerico     desplazar e ir al estado 76
    tk_verdadero            desplazar e ir al estado 77
    tk_falso                desplazar e ir al estado 78

    d_tipo       ir al estado 130
    expresion_t  ir al estado 80
    expresion    ir al estado 81
    operando     ir al estado 82
    funcion_ll   ir al estado 83


Estado 90

   87 accion_ll: tk_identificador tk_parentesis_apertura . l_ll tk_parentesis_cierre
